header spacing fixed

--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -122,7 +122,8 @@ label {
     text-transform: uppercase;
     position: relative;
     border-left: 1px solid #999181;
-    height: 39px;
+    height: 48px;
+    margin-top: -5px;
 }
 
 .phone {
